--- a/lotto.html
+++ b/lotto.html
@@ -75,6 +75,7 @@
   }
   /*참고
   //var로 하는 법-함수로 감싸 변수 고정시키자. let처럼 안밖으로 결계.
+  let i는 블록 안에 들어가있어서 값이 고정된 것이고, var은 함수로 감싸지 않을 때 값이 반복문을 돌고난 후의 값이 됨.
   for(var i=0; i<winBalls.length; i++){
     (function(j){
       setTimeout(()=>{
