--- a/tictactoeWithComputer.html
+++ b/tictactoeWithComputer.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>틱택토</title>
+    <title>틱택토WithComputer</title>
     <style>
       table {
         border-collapse: collapse;
