카드게임 마지막 수정

--- a/cardgame.html
+++ b/cardgame.html
@@ -115,7 +115,7 @@
             completed.push(clicked[0]);
             completed.push(clicked[1]);
             clicked=[];
-            if(completed.length !== 12){
+            if(completed.length !== total){
               clickable = true;
               return;
             } 
